--- a/client/src/styles/_header.scss
+++ b/client/src/styles/_header.scss
@@ -88,8 +88,38 @@ h1{
 
     &:hover {
       transform: scale(1.3); 
+    
+
     }
   }
+
+  .language-switch {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .language-switch button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .language-switch button svg {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 5px;
+    border: 2px solid transparent;
+  }
+  
+  .language-switch button.active svg {
+    border-color: #007bff;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  }
+  
 
   @media screen and (max-width: 768px) {
     .header {
