--- a/client/src/styles/_portfolioContainer.scss
+++ b/client/src/styles/_portfolioContainer.scss
@@ -15,8 +15,8 @@ a{
     color: white;
     text-decoration: none;
 
-}a:hover{
-    transform: scale(1.5);  
+}a:hover{ 
+    box-shadow:  0px 0px 20px rgba(97, 218, 251, 0.6); 
 
 
 }
@@ -39,10 +39,13 @@ a{
 }
 
 .portfolio-h3 {
-    font-size: 80px;
+    font-size: 50px;
+    margin-right: 320px;
+    margin-left: 320px;
     margin-bottom: 10px;
     font-family: 'Courier New', Courier, monospace;
     color: white;
+    margin-bottom: 20px;
 
    
 }
