--- a/client/src/styles/_body.scss
+++ b/client/src/styles/_body.scss
@@ -25,27 +25,59 @@ body {
     overflow-y: auto; /* Viktigt för att inte scrolla canvas */
     font-family: Arial, sans-serif;
 }
+.aboutMe{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+height: 100vh;
+    width: 100%;
+
+
+}
 
 @keyframes gradientBG {
     0% { background-position: 0% 50%; }
     50% { background-position: 100% 50%; }
     100% { background-position: 0% 50%; }
 }
-
-main{
-   
-    color: rgb(249, 246, 246);
-    font-family: "Inspiration", cursive;
-    margin: 0;
+main {
     display: flex;
     flex-direction: column;
-    align-items: center;
-width: 100%;
-    min-height: 100vh; 
-
-
-    
-}
+   
+   
+    width: 100%; 
+    height: 100vh; // Se till att den tar upp hela skärmen
+   
+  }
+  
+/* När sidan inleder övergången */
+.page-enter {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  
+  /* När sidan är mitt i övergången */
+  .page-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
+  }
+  
+  /* När sidan lämnar */
+  .page-exit {
+    opacity: 1;
+    transform: scale(1);
+  }
+  
+  /* När sidan försvinner */
+  .page-exit-active {
+    opacity: 0;
+    transform: scale(1.1);
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+  }
+  
+  
+  
 
 .book{
     filter: invert(1);
@@ -88,6 +120,24 @@ width: 100%;
   /* Dölj alla bilder initialt */
 }
 
+.page {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 1.5s forwards;
+  }
+  
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+
 
 @media screen and (max-width: 768px) {
     * {
@@ -107,6 +157,22 @@ width: 100%;
 
 
     }
+    .aboutMe{
+        height: auto;
+        margin-top: 50px;
+    }
+
+    .swipe-container {
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        user-select: none; /* Förhindrar markering av text vid drag */
+        touch-action: pan-y; /* Låter swipe funka utan scroll-konflikter */
+      }
+      
     .container {
         flex-direction: column;
         align-items: center;
