--- a/client/src/styles/_portfolioContainer.scss
+++ b/client/src/styles/_portfolioContainer.scss
@@ -2,6 +2,7 @@
 .portfolio-container {
 display: flex;
 flex-direction: row;
+justify-content: center;
 font-family: 'Courier New', Courier, monospace;
 
 li{
@@ -25,8 +26,8 @@ a{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 20px; 
-    width: 100%;
+    gap: 40px; 
+
     max-width: 900px;
 
   
@@ -85,7 +86,9 @@ a{
 
     .portfolio-h3 {
         font-size: 40px;
-        padding: 10px;;
+        padding: 10px;
+        margin-left: 0px;
+        margin-right: 0px;
     }
     
 }
