--- a/client/src/styles/_header.scss
+++ b/client/src/styles/_header.scss
@@ -1,7 +1,7 @@
 .header{
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
     padding: 10px;
     margin-top: 40px;
    
@@ -64,19 +64,31 @@ h1{
 
 .linksMedia {
     display: flex; 
-    justify-content: space-around; 
+    justify-content: center; 
     align-items: center; 
     color: white;
- 
+
     & > a svg {
       font-size: 2rem; 
       transition: transform 0.2s;
       padding-right:15px; 
       color: white;
+ 
   
       &:hover {
         transform: scale(1.3); 
       }
+    }
+  }
+
+  .linksMedia a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    transition: transform 0.2s;
+    color: white;
+    &:hover {
+      transform: scale(1.3); 
     }
   }
   
@@ -96,6 +108,7 @@ h1{
   .language-switch {
     display: flex;
     gap: 10px;
+    padding: 5px;
   }
   
   .language-switch button {
@@ -107,24 +120,40 @@ h1{
     transition: all 0.3s ease-in-out;
   }
   
-  .language-switch button svg {
+  .language-switch button img {
     width: 40px;
-    height: 40px;
+    height: 35px;
     object-fit: cover;
+    aspect-ratio: 1 / 1;
+    border-radius: 6px; 
     border-radius: 5px;
     border: 2px solid transparent;
   }
   
-  .language-switch button.active svg {
+  .language-switch button.active img {
     border-color: #007bff;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   }
+
+
+  
   
 
   @media screen and (max-width: 768px) {
     .header {
       flex-direction: column; 
       align-items: center; 
+    }
+    .language-switch {
+     padding: 20px;
+     width: 40%;
+     margin-left: auto;
+     margin-right: auto;
+    }
+
+    .language-switch button img {
+      width: 20px;
+      height: 20px;
     }
   
     .links {
@@ -148,6 +177,91 @@ h1{
     }
   .linksMedia{
     margin-top: 10px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+
+    a{
+      display: flex;
+      justify-content: center;
+    }
+
+    a svg{
+width: 20px;
+height: 20px;
+    }
+
   }
  
   }
+
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+  
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      gap: 4px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: white;
+      
+  
+      .bar {
+        width: 25px;
+        height: 3px;
+        background-color: white;
+        border-radius: 2px;
+      
+      }
+    }
+  
+    .nav-links {
+      display: flex;
+      gap: 80px;
+      display: flex;
+  align-items: flex-start;     
+  height: 100%;  
+  
+      a {
+        text-decoration: none;
+        font-weight: bold;
+        color:white;
+  
+        &.hover:hover {
+          color: #007bff;
+        }
+      }
+    }
+  
+    // MOBIL
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+  
+      .menu-toggle {
+        display: flex;
+        justify-content: center;
+        margin-left: 50px;
+      }
+  
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 1rem;
+        gap: 10px;
+  
+        &.open {
+          display: flex;
+        }
+      }
+    }
+  }
+  
