--- a/client/src/styles/_portfolioContainer.scss
+++ b/client/src/styles/_portfolioContainer.scss
@@ -27,13 +27,13 @@ a{
     flex-direction: column;
     align-items: flex-start;
     gap: 40px; 
-
-    max-width: 900px;
+padding: 10px;
+    max-width: 1000px;
 
   
 }
  .project-image {
-    width: 900px;
+    width: 1000px;
     height: 200px;
     object-fit: cover;
     transition: opacity 0.3s ease-in-out;
@@ -44,11 +44,15 @@ a{
     margin-right: 320px;
     margin-left: 320px;
     margin-bottom: 10px;
+    padding: 10px;
     font-family: 'Courier New', Courier, monospace;
     color: white;
     margin-bottom: 20px;
 
    
+}
+.project-language{
+    padding: 10px
 }
 
 .project-image {
