--- a/client/src/styles/_portfolioContainer.scss
+++ b/client/src/styles/_portfolioContainer.scss
@@ -29,6 +29,7 @@ a{
     gap: 40px; 
 padding: 10px;
     max-width: 1000px;
+    width: 30%;
 
   
 }
@@ -44,7 +45,7 @@ padding: 10px;
     margin-right: 320px;
     margin-left: 320px;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 30px;
     font-family: 'Courier New', Courier, monospace;
     color: white;
     margin-bottom: 20px;
@@ -52,7 +53,8 @@ padding: 10px;
    
 }
 .project-language{
-    padding: 10px
+    padding: 10px;
+    width: 30%;
 }
 
 .project-image {
