--- a/client/src/styles/techStack.scss
+++ b/client/src/styles/techStack.scss
@@ -10,6 +10,7 @@
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     text-align: center;
+    padding: 50px;
   
     h2 {
       font-size: 2rem;
@@ -24,6 +25,7 @@
       font-size: 1.1rem;
       margin-bottom: 1.5rem;
       font-family: 'Courier New', Courier, monospace;
+      padding: 20px
     }
   
     .icons-container {
