--- a/client/src/styles/_portfolioContainer.scss
+++ b/client/src/styles/_portfolioContainer.scss
@@ -96,5 +96,11 @@ padding: 10px;
         margin-left: 0px;
         margin-right: 0px;
     }
+    .project-language{
+        width: 100%;
+    }
+    .project-info{
+        width: 100%;
+    }
     
 }
