--- a/client/src/styles/_body.scss
+++ b/client/src/styles/_body.scss
@@ -41,41 +41,77 @@ body {
     100% { background-position: 0% 50%; }
 }
 main {
-    display: flex;
-    flex-direction: column;
-   
-   
-    width: 100%; 
-    height: 100vh; // Se till att den tar upp hela skärmen
+    position: relative;
+    z-index: 1;
+    height: calc(100vh - 80px); /* om headern är 80px */
+    overflow: hidden;
+    width: 100%;// Se till att den tar upp hela skärmen
    
   }
   
-/* När sidan inleder övergången */
-.page-enter {
+  .background-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* så du kan klicka genom den */
+  }
+  
+  .headerContainer {
+    position: relative;
+    z-index: 2;
+  }
+  
+  .content-wrapper {
+    height: 100%;
+  }
+  
+  /* Din sida som glider in */
+  .page-wrapper > * {
+    transition: opacity 0.5s ease;
     opacity: 0;
-    transform: scale(0.9);
   }
-  
-  /* När sidan är mitt i övergången */
-  .page-enter-active {
+  .page-wrapper.show-content > * {
     opacity: 1;
-    transform: scale(1);
-    transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
   }
   
-  /* När sidan lämnar */
-  .page-exit {
-    opacity: 1;
-    transform: scale(1);
-  }
-  
-  /* När sidan försvinner */
-  .page-exit-active {
+  /* Animationen */
+  .slide-enter {
     opacity: 0;
-    transform: scale(1.1);
-    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+    transform: translateY(100%);
+ visibility: hidden;
   }
   
+  .slide-enter-active {
+    opacity: 1;
+    transform: translateY(0);
+    transition: all 500ms ease;
+    visibility: visible;
+  }
+  
+  .slide-exit {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  
+  .slide-exit-active {
+    opacity: 0;
+    transform: translateY(-40%);
+    transition: all 500ms ease;
+  }
+  
+  
+  
+  /* Undvik att innehåll flashar före animation */
+  .page-container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  
+
   
   
 
@@ -101,6 +137,14 @@ main {
     position: relative;
 }
 
+.page-wrapper {
+  width: 100%;
+  min-height: 100vh;
+/* eller annan ljus färg du använder */
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
 
 .content {
     flex: 1;
@@ -121,15 +165,13 @@ main {
 }
 
 .page {
-    opacity: 0;
-    transform: translateY(20px);
-    animation: fadeInUp 1.5s forwards;
+    animation: none;
   }
   
   @keyframes fadeInUp {
     from {
       opacity: 0;
-      transform: translateY(20px);
+      transform: translateY(10px);
     }
     to {
       opacity: 1;
