--- a/client/src/styles/_body.scss
+++ b/client/src/styles/_body.scss
@@ -202,6 +202,7 @@ main {
     .aboutMe{
         height: auto;
         margin-top: 50px;
+        margin-bottom: 100px;
     }
 
     .swipe-container {
