--- a/client/src/styles/techStack.scss
+++ b/client/src/styles/techStack.scss
@@ -62,3 +62,42 @@
     }
     }
 }
+
+@media (max-width: 768px) {
+
+  
+      .tech-stack-container {
+        padding: 1rem;
+    
+        h2 {
+          font-size: 1.5rem;
+        }
+    
+        p {
+          font-size: 1rem;
+        }
+    
+        .icons-container {
+          gap: 1rem;
+          
+          .icon-card {
+            padding: 0.5rem;
+flex-direction: column;
+          align-items: center;
+          padding: 0.5rem;
+          width: 80px; // 
+    
+            svg {
+              width: 40px;
+              height: 40px;
+            }
+    
+            span {
+              font-size: 0.8rem;
+            }
+          }
+        }
+      }
+    
+
+}
